feat: preliminary V6 daemon, C1/C2 warmup